Fix the height checklist div and set an overflow

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -204,6 +204,7 @@ header {
     display: grid;
     grid-template-columns: repeat(2, 50%);
     gap: 5px;
+    height: 15rem;
 }
 
 .task-form > div:nth-of-type(4) > div:first-of-type {
@@ -214,18 +215,21 @@ header {
 }
 
 .task-form > div:nth-of-type(4) > div:last-of-type {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .checklist-div {
-    display: none;
-    flex: 1;
+    display: block;
+    padding: 8px 5px 5px 5px;
+    margin-top: 10px;
+    height: 12.5rem;
 
     background-color: #fff;
     border: 1px solid #E0E0E0;
     border-radius: 10px;
+    overflow-y: auto;
 }
 
 .notes-container {
